removed integration report target in build-all as we do not have any integration tests yet

--- a/build.xml
+++ b/build.xml
@@ -127,11 +127,6 @@
     	<delete dir="export" quiet="true" includeemptydirs="true" />
     </target>
 
-    <taskdef classname="PhingDoxygen.Task.DoxygenTask" name="doxygen"/>
-    <target name="doxygen" description="Creates documentation">
-        <doxygen config="doxygen.conf"/>
-    </target>
-
-    <target name="build-all" depends="lint-source, unit-report, coverage-report, api-docs, package, integration-report"></target>
+    <target name="build-all" depends="lint-source, unit-report, coverage-report, api-docs, package"></target>
 
 </project>
