Updating tests for better coverage and streamlining phar file boostrap

--- a/package.properties
+++ b/package.properties
@@ -2,5 +2,5 @@ package.title = Freebase
 package.file = Freebase.phar
 package.author = Jonathan Moss <jonathan.moss@tangentone.com.au>
 package.copyright = Tangent/One Australia Pty Ltd (c)
-package.description = Freebase is a php library for Freebase
+package.description = Freebase is a php library for accessing Freebase.com
 package.default = freebase
